--- a/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/03_orthogonal_matrices.ipynb
+++ b/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/03_orthogonal_matrices.ipynb
@@ -6,7 +6,7 @@
       "name": "03-orthogonal-matrices.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZ/j+LPbKem043uRW7+1n0",
+      "authorship_tag": "ABX9TyPtERYW3n3fZ7RZ8v3OfiAc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -189,6 +189,7 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
+        "import torch.linalg as LA\n",
         "\n",
         "import numpy as np\n",
         "import math\n",
@@ -199,7 +200,7 @@
       "metadata": {
         "id": "JsRgdABiFg4F"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -208,10 +209,25 @@
         "torch.manual_seed(42)"
       ],
       "metadata": {
-        "id": "fGUvrmiKFj8v"
+        "id": "fGUvrmiKFj8v",
+        "outputId": "961b52a5-2101-4b5b-b951-8f3c0f66b754",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x7f6681ea5a30>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -227,7 +243,7 @@
       "metadata": {
         "id": "24s-L0HbhLyK"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -289,7 +305,7 @@
       "metadata": {
         "id": "2F-RWUsoFoqT"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -322,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vrnIgp6bUijG",
-        "outputId": "22d64577-437b-40e3-f756-82c25738227f"
+        "outputId": "170dfeff-4f5c-4b7a-c8fa-f52d25aae15b"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +389,7 @@
       "metadata": {
         "id": "fLUm7vSznchk"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -386,12 +402,12 @@
       ],
       "metadata": {
         "id": "vwSP8m2LoKlr",
-        "outputId": "bed2baa3-b8c1-4586-bb9c-714d905e5baf",
+        "outputId": "76c683ea-46ab-41da-a6df-2c33bb11bc62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,12 +439,12 @@
       ],
       "metadata": {
         "id": "8AXYSHyyo5JF",
-        "outputId": "7ba64ca7-3e3b-4fe2-f623-0aa7dabf6a3b",
+        "outputId": "61f31719-bc2c-4be9-98e3-07c88df6ff1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +454,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -452,12 +468,12 @@
       ],
       "metadata": {
         "id": "oGWKDEFDpgOR",
-        "outputId": "a23a54d8-259f-482b-82ed-1f12e55e1b45",
+        "outputId": "c6067a26-f8d0-49a9-9f95-ec9ae9f53d00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +483,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -481,12 +497,12 @@
       ],
       "metadata": {
         "id": "4CDBicKypmSB",
-        "outputId": "4e166947-8b2c-44e7-e760-c73d28ec08c3",
+        "outputId": "6b19188a-c07d-4771-e318-c91f0d8ebe68",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +512,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -539,13 +555,13 @@
       ],
       "metadata": {
         "id": "4K5bx8Keh51E",
-        "outputId": "c020ba31-c54f-442a-b8bf-d7a7a8e8d91e",
+        "outputId": "c834575e-9d80-4e5c-e4bf-75094d8ea149",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
         }
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -638,12 +654,12 @@
       ],
       "metadata": {
         "id": "_xiEpiY9lp5q",
-        "outputId": "d63b2753-7145-4e56-fd96-fea08c201694",
+        "outputId": "beed0f1a-4612-40ce-8f47-d032652e0bec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,12 +691,12 @@
       ],
       "metadata": {
         "id": "YM-JxRl8nFMC",
-        "outputId": "e308bf4f-521c-4693-de59-3fb04efba00e",
+        "outputId": "901575fa-d33d-41b2-c563-87a5f36d3b6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -702,11 +718,212 @@
       "cell_type": "markdown",
       "source": [
         "**Negating the angle of rotation is equivalent to inverting the rotation matrix, which is equivalent to transposing the rotation matrix**\n",
+        "\n",
+        "For instance, consider in plane rotation. Say a point $x$ is rotated about the origin to vector $y$ via matrix $R$. Thus\n",
+        "\n",
+        "$$\n",
+        "R = \n",
+        "\\begin{bmatrix}\n",
+        "        cos\\theta & -sin\\theta \\\\\n",
+        "        sin\\theta & cos\\theta \\\\\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "$$\n",
+        "y = Rx\n",
+        "$$\n",
+        "\n",
+        "Now, we can go back from $y$ to $x$ by rotating by $-\\theta$.\n",
+        "\n",
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "        cos(-\\theta) & -sin(-\\theta) \\\\\n",
+        "        sin(-\\theta) & cos(-\\theta) \\\\\n",
+        "\\end{bmatrix}\n",
+        "=\n",
+        "\\begin{bmatrix}\n",
+        "        cos\\theta & sin\\theta \\\\\n",
+        "        -sin\\theta & cos\\theta \\\\\n",
+        "\\end{bmatrix}\n",
+        "= R^T\n",
+        "$$\n",
+        "\n",
+        "In other words, $R^T$ inverts the rotation, i.e., rotates by the negative angle.\n",
+        "\n",
+        "Let us now negate the rotation i.e rotate the point back by -30 degrees.\n",
         "\n"
       ],
       "metadata": {
         "id": "gTlVoA1_n988"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "R_neg30 = rotation_matrix_2d(-30)\n",
+        "print(f\"Matrix to rotate in-plane by -30 degrees about origin:\\n{R_neg30}\")\n",
+        "\n",
+        "# Rotation by negative angle is equivalent to inverse rotation\n",
+        "w = torch.matmul(R_neg30, v)\n",
+        "print(f\"Re-Rotated Vector w:\\n{w}\")\n",
+        "\n",
+        "# We assert that this vector is the same as the original vector u\n",
+        "assert torch.all(w == u)\n",
+        "\n",
+        "# We also assert that R_neg30 is the transpose and the inverse of R_30\n",
+        "assert torch.allclose(R_30, R_neg30.T)\n",
+        "# Matrix that rotates by an angle is inverse of the matrix that rotates by negative of the same angle\n",
+        "assert torch.allclose(torch.matmul(R_30, R_neg30), torch.eye(2))"
+      ],
+      "metadata": {
+        "id": "eqWJV85iQuq6",
+        "outputId": "9296c9a9-933c-4c90-bbcd-d1a1186ea0a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matrix to rotate in-plane by -30 degrees about origin:\n",
+            "tensor([[ 0.8660,  0.5000],\n",
+            "        [-0.5000,  0.8660]])\n",
+            "Re-Rotated Vector w:\n",
+            "tensor([[4.],\n",
+            "        [0.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Eigenvalues and eigenvectors of the rotation matrix: How to find the axis of rotation**\n",
+        "\n",
+        "Let $\\lambda,  e$ be an eigenvalue, eigenvector pair of a rotation matrix $R$. Then,\n",
+        "\n",
+        "$$Re = \\lambda e$$\n",
+        "\n",
+        "After Transposing both sides,\n",
+        "\n",
+        "$$(Re)^T = (\\lambda e)^T$$\n",
+        "$$e^TR^T = \\lambda e^T$$\n",
+        "\n",
+        "Multiplying left and right sides, respectively, with equivalent entities $Re$ and $\\lambda e$, we get,\n",
+        "\n",
+        "$$e^TR^T(Re) = \\lambda e^T(\\lambda e)$$\n",
+        "$$e^T(R^TR)e = \\lambda^2 e^Te$$\n",
+        "$$e^T(I)e = \\lambda^2 e^Te$$\n",
+        "$$e^Te = \\lambda^2 e^Te$$\n",
+        "$$ \\lambda^2 = 1$$\n",
+        "$$ \\lambda = 1$$\n",
+        "\n",
+        "(the negative solution $\\lambda = -1$ corresponds to reflection).\n",
+        "\n",
+        "Thus, all rotation matrices\n",
+        "will have 1 as one of its eigenvalues. The corresponding eigenvector $e$ satisfies $Re = e$.\n",
+        "\n",
+        "This is the axis of rotation - the set of points that stay where they were post rotation.\n",
+        "\n",
+        "Let us now compute the eigen values and eigen vectors of the rotation matrix.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8rm89BrsTm_f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Matrix for rotation by 45 degrees about origin\n",
+        "R = torch.tensor([\n",
+        "  [0.7071, 0.7071, 0], \n",
+        "  [-0.7071, 0.7071, 0],\n",
+        "  [0, 0, 1]\n",
+        "])\n",
+        "\n",
+        "# As seen in the previous section, A is a rotation matrix around the Z axis\n",
+        "l, e = LA.eig(R)"
+      ],
+      "metadata": {
+        "id": "xfAF8N6PYxg2"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We know that all rotation matrices will have 1 as one of its eigenvalues.\n",
+        "\n",
+        "The eigen vector corresponding to that value is the axis of rotation."
+      ],
+      "metadata": {
+        "id": "NkZkQ6DIZuuH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# torch.where returns the indices where the specified condition is satisfied\n",
+        "axis_of_rotation = e[:, torch.where(l == 1.0)]\n",
+        "\n",
+        "# torch.squeeze is used to remove dimensions of size 1\n",
+        "axis_of_rotation = torch.squeeze(axis_of_rotation)\n",
+        "print(f\"Axis of rotation is: {axis_of_rotation}\")\n",
+        "\n",
+        "# axis of rotation is the Z-axis\n",
+        "assert np.allclose(axis_of_rotation, np.array([0, 0, 1]))\n",
+        "\n",
+        "# Let us take a random point on the axis of rotation\n",
+        "p = torch.randint(0, 10, (1, )) * axis_of_rotation  \n",
+        "print(f\"Point of axis of rotation: {p}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ULz86MfPZzKo",
+        "outputId": "22732c1b-1860-4722-e6b8-b5f3c8f34971"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Axis of rotation is: tensor([0.+0.j, 0.+0.j, 1.+0.j])\n",
+            "Point of axis of rotation: tensor([0.+0.j, 0.+0.j, 7.+0.j])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Point on the axis of rotation remain unchanged even after rotation. \n",
+        "\n",
+        "Thus vector p and its transform $Rp$ are close."
+      ],
+      "metadata": {
+        "id": "-sWWTgQPake7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "assert torch.allclose(torch.matmul(R, p.real), p.real)"
+      ],
+      "metadata": {
+        "id": "wTQ6_f62arOk"
+      },
+      "execution_count": 18,
+      "outputs": []
     }
   ]
 }
