--- a/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/04_matrix_diagonalization.ipynb
+++ b/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/04_matrix_diagonalization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM0lby5nvXcco0wTttODAij",
+      "authorship_tag": "ABX9TyM1Z26Pg82Xp3rpoItOJAFL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "JsRgdABiFg4F"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -164,18 +164,18 @@
       ],
       "metadata": {
         "id": "fGUvrmiKFj8v",
-        "outputId": "961b52a5-2101-4b5b-b951-8f3c0f66b754",
+        "outputId": "3f0cbb10-5af0-42e6-8959-8dcf0e98d55a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7f6681ea5a30>"
+              "<torch._C.Generator at 0x7fe4c01fea30>"
             ]
           },
           "metadata": {},
@@ -184,26 +184,9 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "def plot_vector(ax, row_vector, color=\"cyan\"):\n",
-        "  \"\"\"\n",
-        "  Plot a 3D vector in specified color\n",
-        "  \"\"\"\n",
-        "  assert len(row_vector == 3)\n",
-        "  v = torch.squeeze(row_vector)\n",
-        "  ax.quiver(0, 0, 0, row_vector[0], row_vector[1], row_vector[2], color=color)"
-      ],
-      "metadata": {
-        "id": "24s-L0HbhLyK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "##Rotation matrix"
+        "##Numpy matrix diagonalization"
       ],
       "metadata": {
         "id": "Eh1WCaxPhVtu"
@@ -212,7 +195,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let us create rotation matrix by angle $\\theta$ in 2D and 3D space."
+        "Let us reconsider our rotation matrix."
       ],
       "metadata": {
         "id": "Gtqw_3h5EnCR"
@@ -221,99 +204,82 @@
     {
       "cell_type": "code",
       "source": [
-        "def rotation_matrix_2d(theta):\n",
+        "def diagonalise(matrix):\n",
         "  \"\"\"\n",
-        "  Returns the matrix that performs in-plane 2D rotation by angle theta about origin.\n",
-        "  Thus, multiplication with this matrix moves a point to a new location.\n",
-        "  Angle between the position vectors of original and new point is theta\n",
+        "  np.linalg.eig(matrix) returns the eigenvalues of matrix in an array (first return value) \n",
+        "  and the eigvectors as a matrix (each column is an eigenvector)\n",
         "  \"\"\"\n",
-        "  return torch.tensor([\n",
-        "    [cos(radians(theta)), -sin(radians(theta))],\n",
-        "    [sin(radians(theta)), cos(radians(theta))]\n",
-        "  ])\n",
-        "\n",
-        "def rotation_matrix_3d(theta, axis):\n",
-        "  \"\"\"\n",
-        "  Returns the matrix that will rotate a point in 3D space about the chosen axis by angle theta degrees.\n",
-        "  Axis of rotation, can be 0, 1 or 2 corresponding to x, y or z axis respectively.\n",
-        "  \"\"\"\n",
-        "  if axis == 0:\n",
-        "    return torch.tensor([\n",
-        "      [1, 0, 0],\n",
-        "      [0, cos(radians(theta)), -sin(radians(theta))],\n",
-        "      [0, sin(radians(theta)), cos(radians(theta))]\n",
-        "    ])\n",
-        "  if axis == 1:\n",
-        "    return torch.tensor([\n",
-        "      [cos(radians(theta)), 0, -sin(radians(theta))],\n",
-        "      [0, 1, 0],\n",
-        "      [sin(radians(theta)), 0, cos(radians(theta))]\n",
-        "    ])\n",
-        "  if axis == 2:\n",
-        "    return torch.tensor([\n",
-        "      [cos(radians(theta)), -sin(radians(theta)), 0],\n",
-        "      [sin(radians(theta)), cos(radians(theta)), 0],\n",
-        "      [0, 0, 1],\n",
-        "    ])"
+        "  try:\n",
+        "    l, e = torch.linalg.eig(matrix)\n",
+        "    # make a diagonal matrix from the eigenvalues\n",
+        "    sigma = torch.diag(l)\n",
+        "    # return the three factor matrices\n",
+        "    return e, torch.diag(l), torch.linalg.inv(e)\n",
+        "  except RuntimeError:\n",
+        "    print(\"Cannot diagonalise matrix!\")"
       ],
       "metadata": {
         "id": "2F-RWUsoFoqT"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let us consider the vector `[1, 0, 0]`"
-      ],
-      "metadata": {
-        "id": "pVk782IMkIrl"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "u = torch.tensor([1, 0, 0], dtype=torch.float)\n",
-        "# Reshape it to represent a row vector\n",
-        "u = u.reshape((3, 1))\n",
-        "print(f\"Original vector: \\n{u}\\n\")\n",
+        "A = torch.tensor([\n",
+        "  [0.7071, 0.7071, 0],\n",
+        "  [-0.7071, 0.7071, 0],\n",
+        "  [0, 0, 1]\n",
+        "])\n",
+        "print(f\"A: \\n{A}\")\n",
         "\n",
-        "# Rotate it by 30 degrees around Z Axis\n",
-        "angle_of_rotation = 30.0\n",
-        "R = rotation_matrix_3d(angle_of_rotation, 2)\n",
-        "print(f\"Rotation matrix for {angle_of_rotation} degrees around Z Axis is:\\n{R}\\n\")\n",
+        "S, sigma, S_inv = diagonalise(A)\n",
         "\n",
-        "v = torch.matmul(R, u)\n",
-        "print(f\"Vector after rotation:\\n{v}\")"
+        "# Let us reconstruct the original matriox from its factors\n",
+        "A1 = torch.matmul(S, torch.matmul(sigma, S_inv))\n",
+        "print(f\"\\nS =\\n{S}\")\n",
+        "print(f\"\\nsigma =\\n{sigma}\")\n",
+        "print(f\"\\nS_inv =\\n{S_inv}\")\n",
+        "print(f\"\\nS sigmaa S_inv =\\n{A1}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vrnIgp6bUijG",
-        "outputId": "170dfeff-4f5c-4b7a-c8fa-f52d25aae15b"
+        "outputId": "56d4f26a-47b0-4cf8-bc96-0925007bfa9f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original vector: \n",
-            "tensor([[1.],\n",
-            "        [0.],\n",
-            "        [0.]])\n",
-            "\n",
-            "Rotation matrix for 30.0 degrees around Z Axis is:\n",
-            "tensor([[ 0.8660, -0.5000,  0.0000],\n",
-            "        [ 0.5000,  0.8660,  0.0000],\n",
+            "A: \n",
+            "tensor([[ 0.7071,  0.7071,  0.0000],\n",
+            "        [-0.7071,  0.7071,  0.0000],\n",
             "        [ 0.0000,  0.0000,  1.0000]])\n",
             "\n",
-            "Vector after rotation:\n",
-            "tensor([[0.8660],\n",
-            "        [0.5000],\n",
-            "        [0.0000]])\n"
+            "S =\n",
+            "tensor([[0.7071+0.0000j, 0.7071-0.0000j, 0.0000+0.0000j],\n",
+            "        [0.0000+0.7071j, 0.0000-0.7071j, 0.0000+0.0000j],\n",
+            "        [0.0000+0.0000j, 0.0000-0.0000j, 1.0000+0.0000j]])\n",
+            "\n",
+            "sigma =\n",
+            "tensor([[0.7071+0.7071j, 0.0000+0.0000j, 0.0000+0.0000j],\n",
+            "        [0.0000+0.0000j, 0.7071-0.7071j, 0.0000+0.0000j],\n",
+            "        [0.0000+0.0000j, 0.0000+0.0000j, 1.0000+0.0000j]])\n",
+            "\n",
+            "S_inv =\n",
+            "tensor([[0.7071+0.0000j, 0.0000-0.7071j, 0.0000-0.0000j],\n",
+            "        [0.7071+0.0000j, 0.0000+0.7071j, 0.0000+0.0000j],\n",
+            "        [0.0000+0.0000j, 0.0000+0.0000j, 1.0000+0.0000j]])\n",
+            "\n",
+            "S sigmaa S_inv =\n",
+            "tensor([[ 0.7071+4.6232e-08j,  0.7071+5.5519e-08j,  0.0000+0.0000e+00j],\n",
+            "        [-0.7071+4.6232e-08j,  0.7071-5.5519e-08j,  0.0000+0.0000e+00j],\n",
+            "        [ 0.0000+0.0000e+00j,  0.0000+0.0000e+00j,  1.0000+0.0000e+00j]])\n"
           ]
         }
       ]
@@ -321,10 +287,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's computes angle between two vectors."
+        "We assert that the original matrix is the same as the reconstruction from the diagonal decomposition factors."
+      ],
+      "metadata": {
+        "id": "IEjGY7Ys3pMJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "assert torch.allclose(A, A1.real)"
+      ],
+      "metadata": {
+        "id": "mCdRZmN03r7h"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Linear Systems with Diagonalization"
       ],
       "metadata": {
         "id": "gofaydHqnZUC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YaJbqdMQ4IL8"
       }
     },
     {
