--- a/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/04_matrix_diagonalization.ipynb
+++ b/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/04_matrix_diagonalization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP6bt9NbQmcmVpsMor0tU1V",
+      "authorship_tag": "ABX9TyM3Ye6NQ8JovKZO18hx9FJT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,7 +164,7 @@
       ],
       "metadata": {
         "id": "fGUvrmiKFj8v",
-        "outputId": "f46edd1b-7cbe-472c-a79d-fcebc8560357",
+        "outputId": "b4cfe2e3-6637-4a34-b6ab-f424624053d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -175,7 +175,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7fe2b9a61a50>"
+              "<torch._C.Generator at 0x7f140900b890>"
             ]
           },
           "metadata": {},
@@ -221,7 +221,7 @@
       "metadata": {
         "id": "2F-RWUsoFoqT"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
         "id": "vrnIgp6bUijG",
         "outputId": "12acd592-c0f6-4b20-bc6e-9ff2f9c9bb06"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "mCdRZmN03r7h"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -501,7 +501,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,52 +525,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A matrix $R$ is orthogonal if and only if it its transpose is also its inverse, i.e., $R^TR = RR^T =  I$.\n",
+        "If matrix $A$ can be diagonalized then,\n",
         "\n",
-        "All rotations matrices are orthogonal matrices. All orthogonal matrices represent some rotation.\n",
-        "\n",
-        "For instance:\n",
+        "$$A = S\\Lambda S^{-1}$$\n",
         "\n",
         "$$\n",
-        "\\begin{bmatrix}\n",
-        "        cos\\theta & -sin\\theta \\\\\n",
-        "        sin\\theta & cos\\theta \\\\\n",
-        "\\end{bmatrix}^T \n",
-        "\\begin{bmatrix}\n",
-        "        cos\\theta & -sin\\theta \\\\\n",
-        "        sin\\theta & cos\\theta \\\\\n",
-        "\\end{bmatrix}\n",
+        "A^2 = S\\Lambda S^{-1} S\\Lambda S^{-1}\n",
         "=\n",
-        "\\begin{bmatrix}\n",
-        "        cos\\theta & sin\\theta \\\\\n",
-        "        -sin\\theta & cos\\theta \\\\\n",
-        "\\end{bmatrix}^T \n",
-        "\\begin{bmatrix}\n",
-        "        cos\\theta & -sin\\theta \\\\\n",
-        "        sin\\theta & cos\\theta \\\\\n",
-        "\\end{bmatrix}\n",
-        "=\n",
-        "\\begin{bmatrix}\n",
-        "        cos^2\\theta + sin^2\\theta & 0 \\\\\n",
-        "        0 & cos^2\\theta + sin^2\\theta \\\\\n",
-        "\\end{bmatrix}\n",
-        "=\n",
-        "\\begin{bmatrix}\n",
-        "        1 & 0 \\\\\n",
-        "        0 & 1 \\\\\n",
-        "\\end{bmatrix}\n",
-        "=I\n",
+        "A = S\\Lambda I \\Lambda S^{-1}=A = S\\Lambda^2 S^{-1}\n",
         "$$\n",
         "\n",
-        "**Orthogonality implies rotation is length preserving**\n",
+        "$$A^n = ... = ... = S\\Lambda^n S^{-1}$$\n",
         "\n",
-        "Lengths (magnitudes) of the 2 vectors $x, y$ are equal, since it is easy to see that:\n",
+        "For a diagonal matrix:\n",
         "\n",
         "$$\n",
-        "||y|| = y^Ty = (Rx)^T(Rx) = x^TR^TRx = x^TIx = x^Tx = ||x||\n",
+        "\\begin{bmatrix}\n",
+        "        \\lambda_1 & 0 & ... & 0 \\\\\n",
+        "        0 & \\lambda_2 & ... & 0 \\\\\n",
+        "        ... & ... & ... \\\\\n",
+        "        ... & ... & ... \\\\\n",
+        "        0 & 0 & ... & \\lambda_n \\\\\n",
+        "\\end{bmatrix}\n",
         "$$\n",
         "\n",
-        "Since we know that $(AB)^T = B^TA^T$"
+        "The $n^{th}$ power is simply,\n",
+        "\n",
+        "$$\n",
+        "\\Lambda^n= \n",
+        "\\begin{bmatrix}\n",
+        "        \\lambda_1^n & 0 & ... & 0 \\\\\n",
+        "        0 & \\lambda_2^n & ... & 0 \\\\\n",
+        "        ... & ... & ... \\\\\n",
+        "        ... & ... & ... \\\\\n",
+        "        0 & 0 & ... & \\lambda_n^n \\\\\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "If one needs to compute various powers of a `m x m` matrix A at various times, one\n",
+        "should pre-compute the matrix S and compute any power with only $O(m)$ operations - compared to $(nm^3)$ operations necessary for naive computations."
       ],
       "metadata": {
         "id": "V-Rw04WAfgaY"
@@ -579,287 +573,104 @@
     {
       "cell_type": "code",
       "source": [
-        "R_30 = rotation_matrix_2d(30)\n",
-        "print(f\"Matrix to rotate in-plane by 30 degrees about origin:\\n{R_30}\")\n",
+        "A = torch.tensor([\n",
+        "  [1, 2, 1],\n",
+        "  [2, 2, 3],\n",
+        "  [1, 3, 3]\n",
+        "], dtype=torch.float)\n",
         "\n",
-        "# Inverse of rotation matrix is same as the transpose, this is orthogonality.\n",
-        "assert torch.allclose(torch.linalg.inv(R_30), R_30.T)\n",
+        "def brute_force_matrix_power(matrix, y):\n",
+        "  \"\"\"Returns matrix raised to the power of y\"\"\"\n",
+        "  # Assert that it is a square matrix\n",
+        "  assert len(matrix.shape) == 2 and matrix.shape[0] == matrix.shape[1]\n",
+        "  assert type(y) == int\n",
         "\n",
-        "# Equivalently, if we multiply a rotation matrix and its transpose, we get the identity matrix.\n",
-        "assert torch.allclose(torch.matmul(R_30, R_30.T), torch.eye(2))"
+        "  if y == 0:\n",
+        "    # Return identity matrix \n",
+        "    return torch.eye(matrix.shape[0])\n",
+        "  output_matrix = torch.clone(matrix)\n",
+        "\n",
+        "  for i in range(y - 1):\n",
+        "    output_matrix = torch.matmul(matrix, output_matrix)\n",
+        "  return output_matrix"
       ],
       "metadata": {
-        "id": "_xiEpiY9lp5q",
-        "outputId": "beed0f1a-4612-40ce-8f47-d032652e0bec",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_xiEpiY9lp5q"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Matrix to rotate in-plane by 30 degrees about origin:\n",
-            "tensor([[ 0.8660, -0.5000],\n",
-            "        [ 0.5000,  0.8660]])\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Let us take a random point (4, 0)\n",
-        "u = torch.tensor([[4], [0]], dtype=torch.float)\n",
+        "def matrix_power_using_diag(matrix, y):\n",
+        "  \"\"\"Returns matrix raised to the power of y\"\"\"\n",
+        "  # Assert that it is a square matrix\n",
+        "  assert len(matrix.shape) == 2 and matrix.shape[0] == matrix.shape[1]\n",
+        "  assert type(y) == int\n",
         "\n",
-        "# Rotate it by 30 degrees\n",
-        "v = torch.matmul(R_30, u)\n",
-        "print(f\"Original vector u:\\n{u}\")\n",
-        "print(f\"Rotated Vector v:\\n{v}\")\n",
+        "  if y == 0:\n",
+        "    # Return identity matrix \n",
+        "    return torch.eye(matrix.shape[0])\n",
         "\n",
-        "print(f\"Length of u: {torch.linalg.norm(u)}\")\n",
-        "print(f\"Length of v: {torch.linalg.norm(v)}\")\n",
+        "  w, v = torch.linalg.eig(matrix)\n",
+        "  # Compute w^y\n",
+        "  w_y = w ** float(y)\n",
         "\n",
-        "# We assert that rotation is length preserving\n",
-        "assert torch.linalg.norm(u) == torch.linalg.norm(v)"
+        "  return torch.matmul(v, torch.matmul(torch.diag(w_y), torch.linalg.inv(v)))"
+      ],
+      "metadata": {
+        "id": "nyKI5F_J_6WX"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# One way to compute A**2 would be to multiply A by A\n",
+        "# This is an O(nm^3) operation\n",
+        "A_2_brute_force = brute_force_matrix_power(A, 2)\n",
+        "\n",
+        "# We can instead diagonalise the matrix and compute A ** 2\n",
+        "# This reduces the complexity to O(m)\n",
+        "A_2_diag = matrix_power_using_diag(A, 2)\n",
+        "\n",
+        "print(f\"A:\\n{A}\")\n",
+        "print(f\"A**2 computed via brute force:\\n{A_2_brute_force}\")\n",
+        "print(f\"A**2 computed via diagonalisation:\\n{A_2_diag}\")\n",
+        "\n",
+        "# We assert that A**2 computed via brute force and diagonalisation is identical\n",
+        "assert torch.allclose(A_2_brute_force, A_2_diag.real)"
       ],
       "metadata": {
         "id": "YM-JxRl8nFMC",
-        "outputId": "901575fa-d33d-41b2-c563-87a5f36d3b6a",
+        "outputId": "e350c9c9-149b-4c1a-ec69-c2204687b97d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original vector u:\n",
-            "tensor([[4.],\n",
-            "        [0.]])\n",
-            "Rotated Vector v:\n",
-            "tensor([[3.4641],\n",
-            "        [2.0000]])\n",
-            "Length of u: 4.0\n",
-            "Length of v: 4.0\n"
+            "A:\n",
+            "tensor([[1., 2., 1.],\n",
+            "        [2., 2., 3.],\n",
+            "        [1., 3., 3.]])\n",
+            "A**2 computed via brute force:\n",
+            "tensor([[ 6.,  9., 10.],\n",
+            "        [ 9., 17., 17.],\n",
+            "        [10., 17., 19.]])\n",
+            "A**2 computed via diagonalisation:\n",
+            "tensor([[ 6.0000+0.j,  9.0000+0.j, 10.0000+0.j],\n",
+            "        [ 9.0000+0.j, 17.0000+0.j, 17.0000+0.j],\n",
+            "        [10.0000+0.j, 17.0000+0.j, 19.0000+0.j]])\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Negating the angle of rotation is equivalent to inverting the rotation matrix, which is equivalent to transposing the rotation matrix**\n",
-        "\n",
-        "For instance, consider in plane rotation. Say a point $x$ is rotated about the origin to vector $y$ via matrix $R$. Thus\n",
-        "\n",
-        "$$\n",
-        "R = \n",
-        "\\begin{bmatrix}\n",
-        "        cos\\theta & -sin\\theta \\\\\n",
-        "        sin\\theta & cos\\theta \\\\\n",
-        "\\end{bmatrix}\n",
-        "$$\n",
-        "$$\n",
-        "y = Rx\n",
-        "$$\n",
-        "\n",
-        "Now, we can go back from $y$ to $x$ by rotating by $-\\theta$.\n",
-        "\n",
-        "$$\n",
-        "\\begin{bmatrix}\n",
-        "        cos(-\\theta) & -sin(-\\theta) \\\\\n",
-        "        sin(-\\theta) & cos(-\\theta) \\\\\n",
-        "\\end{bmatrix}\n",
-        "=\n",
-        "\\begin{bmatrix}\n",
-        "        cos\\theta & sin\\theta \\\\\n",
-        "        -sin\\theta & cos\\theta \\\\\n",
-        "\\end{bmatrix}\n",
-        "= R^T\n",
-        "$$\n",
-        "\n",
-        "In other words, $R^T$ inverts the rotation, i.e., rotates by the negative angle.\n",
-        "\n",
-        "Let us now negate the rotation i.e rotate the point back by -30 degrees.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "gTlVoA1_n988"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "R_neg30 = rotation_matrix_2d(-30)\n",
-        "print(f\"Matrix to rotate in-plane by -30 degrees about origin:\\n{R_neg30}\")\n",
-        "\n",
-        "# Rotation by negative angle is equivalent to inverse rotation\n",
-        "w = torch.matmul(R_neg30, v)\n",
-        "print(f\"Re-Rotated Vector w:\\n{w}\")\n",
-        "\n",
-        "# We assert that this vector is the same as the original vector u\n",
-        "assert torch.all(w == u)\n",
-        "\n",
-        "# We also assert that R_neg30 is the transpose and the inverse of R_30\n",
-        "assert torch.allclose(R_30, R_neg30.T)\n",
-        "# Matrix that rotates by an angle is inverse of the matrix that rotates by negative of the same angle\n",
-        "assert torch.allclose(torch.matmul(R_30, R_neg30), torch.eye(2))"
-      ],
-      "metadata": {
-        "id": "eqWJV85iQuq6",
-        "outputId": "9296c9a9-933c-4c90-bbcd-d1a1186ea0a5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Matrix to rotate in-plane by -30 degrees about origin:\n",
-            "tensor([[ 0.8660,  0.5000],\n",
-            "        [-0.5000,  0.8660]])\n",
-            "Re-Rotated Vector w:\n",
-            "tensor([[4.],\n",
-            "        [0.]])\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Eigenvalues and eigenvectors of the rotation matrix: How to find the axis of rotation**\n",
-        "\n",
-        "Let $\\lambda,  e$ be an eigenvalue, eigenvector pair of a rotation matrix $R$. Then,\n",
-        "\n",
-        "$$Re = \\lambda e$$\n",
-        "\n",
-        "After Transposing both sides,\n",
-        "\n",
-        "$$(Re)^T = (\\lambda e)^T$$\n",
-        "$$e^TR^T = \\lambda e^T$$\n",
-        "\n",
-        "Multiplying left and right sides, respectively, with equivalent entities $Re$ and $\\lambda e$, we get,\n",
-        "\n",
-        "$$e^TR^T(Re) = \\lambda e^T(\\lambda e)$$\n",
-        "$$e^T(R^TR)e = \\lambda^2 e^Te$$\n",
-        "$$e^T(I)e = \\lambda^2 e^Te$$\n",
-        "$$e^Te = \\lambda^2 e^Te$$\n",
-        "$$ \\lambda^2 = 1$$\n",
-        "$$ \\lambda = 1$$\n",
-        "\n",
-        "(the negative solution $\\lambda = -1$ corresponds to reflection).\n",
-        "\n",
-        "Thus, all rotation matrices\n",
-        "will have 1 as one of its eigenvalues. The corresponding eigenvector $e$ satisfies $Re = e$.\n",
-        "\n",
-        "This is the axis of rotation - the set of points that stay where they were post rotation.\n",
-        "\n",
-        "Let us now compute the eigen values and eigen vectors of the rotation matrix.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "8rm89BrsTm_f"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Matrix for rotation by 45 degrees about origin\n",
-        "R = torch.tensor([\n",
-        "  [0.7071, 0.7071, 0], \n",
-        "  [-0.7071, 0.7071, 0],\n",
-        "  [0, 0, 1]\n",
-        "])\n",
-        "\n",
-        "# As seen in the previous section, A is a rotation matrix around the Z axis\n",
-        "l, e = LA.eig(R)"
-      ],
-      "metadata": {
-        "id": "xfAF8N6PYxg2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We know that all rotation matrices will have 1 as one of its eigenvalues.\n",
-        "\n",
-        "The eigen vector corresponding to that value is the axis of rotation."
-      ],
-      "metadata": {
-        "id": "NkZkQ6DIZuuH"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# torch.where returns the indices where the specified condition is satisfied\n",
-        "axis_of_rotation = e[:, torch.where(l == 1.0)]\n",
-        "\n",
-        "# torch.squeeze is used to remove dimensions of size 1\n",
-        "axis_of_rotation = torch.squeeze(axis_of_rotation)\n",
-        "print(f\"Axis of rotation is: {axis_of_rotation}\")\n",
-        "\n",
-        "# axis of rotation is the Z-axis\n",
-        "assert np.allclose(axis_of_rotation, np.array([0, 0, 1]))\n",
-        "\n",
-        "# Let us take a random point on the axis of rotation\n",
-        "p = torch.randint(0, 10, (1, )) * axis_of_rotation  \n",
-        "print(f\"Point of axis of rotation: {p}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ULz86MfPZzKo",
-        "outputId": "22732c1b-1860-4722-e6b8-b5f3c8f34971"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Axis of rotation is: tensor([0.+0.j, 0.+0.j, 1.+0.j])\n",
-            "Point of axis of rotation: tensor([0.+0.j, 0.+0.j, 7.+0.j])\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Point on the axis of rotation remain unchanged even after rotation. \n",
-        "\n",
-        "Thus vector p and its transform $Rp$ are close."
-      ],
-      "metadata": {
-        "id": "-sWWTgQPake7"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "assert torch.allclose(torch.matmul(R, p.real), p.real)"
-      ],
-      "metadata": {
-        "id": "wTQ6_f62arOk"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
