--- a/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/05_spectral_decomposition.ipynb
+++ b/math-and-architectures-of-deep-learning/introduction-to-vectors-matrices-and-tensors/05_spectral_decomposition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNaTcQc45+ExIXubKcTuFWV",
+      "authorship_tag": "ABX9TyNswkMznWdChk0JdZ2MNDoC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,8 +87,7 @@
         "\n",
         "The above equation can be rewritten as equivalently, \n",
         "\n",
-        "$A_{n, n} = \\lambda_{1} \\vec{e}_{1} \\vec{e}_{1}^{T} + \\lambda_{2} \\vec{e}_{2} \\vec{e}_{2}^{T}\n",
-        "+ ... + \\lambda_{n} \\vec{e}_{n} \\vec{e}_{n}^{T}$.\n",
+        "$A_{n, n} = \\lambda_{1} \\vec{e}_{1} \\vec{e}_{1}^{T} + \\lambda_{2} \\vec{e}_{2} \\vec{e}_{2}^{T}+ ... + \\lambda_{n} \\vec{e}_{n} \\vec{e}_{n}^{T}$.\n",
         "\n",
         "\n",
         "**This is the spectral decomposition of a symmetric matrix.**"
@@ -121,7 +120,7 @@
       "metadata": {
         "id": "JsRgdABiFg4F"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +201,7 @@
       "metadata": {
         "id": "2F-RWUsoFoqT"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +233,7 @@
         "id": "vrnIgp6bUijG",
         "outputId": "4ac88a75-396a-494a-df83-d20795d7f975"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
